--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -61,6 +61,7 @@
                                                    <%-- <asp:TreeNode Text="Shipment Search" Value="~/Forms/Web Forms/frmShipmentDetailSage.aspx"></asp:TreeNode>--%>
                                                     <asp:TreeNode Text="Shipment Details" Value="~/Forms/Web Forms/frmShipmentInfoDetails.aspx"></asp:TreeNode>
                                                 </asp:TreeNode> 
+                                                <asp:TreeNode Text="Stations" Value="~/Forms/Web Forms/frmStations.aspx"></asp:TreeNode>
                                                 <asp:TreeNode Text="Reports" ToolTip="Charts" Value="../Web Forms/frmChart.aspx"></asp:TreeNode>
                                                 
                                                 <asp:TreeNode Text="Shipping" Value="~/Forms/Web Forms/frmShippingInfo.aspx"></asp:TreeNode>
@@ -70,8 +71,8 @@
                                                     <asp:TreeNode Text="Role" Value="#"></asp:TreeNode>
                                                     <asp:TreeNode Text="Log" Value="~/Forms/Web Forms/frmErrorLog.aspx"></asp:TreeNode>
                                                 </asp:TreeNode>
-                                                <asp:TreeNode Text="Track Shipment" Value="~/Forms/Web Forms/frmTrackShipment.aspx"></asp:TreeNode>
-                                                <asp:TreeNode Text="Stations" Value="~/Forms/Web Forms/frmStations.aspx"></asp:TreeNode>
+                                               <%-- <asp:TreeNode Text="Track Shipment" Value="~/Forms/Web Forms/frmTrackShipment.aspx"></asp:TreeNode>--%>
+                                                
                                             </Nodes>
                                             <NodeStyle Font-Names="Arial" Font-Size="13pt" Font-Bold="false" ForeColor="White" HorizontalPadding="5px" NodeSpacing="0px" VerticalPadding="0px" />
                                             <ParentNodeStyle Font-Bold="False" />
