--- a/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
@@ -275,7 +275,38 @@ ul.style3 .first .date
         color:black;
     }
 
+    /*Accordian Panel*/
+     .accordionHeader {
+            border: 1px solid #2F4F4F;
+            color: #cfa917;
+            background: rgba(0,0,0,0.80);
+            font-family: Arial, Sans-Serif;
+            font-size: 12px;
+            font-weight: bold;
+            padding: 5px;
+            margin-top: 5px;
+            cursor: pointer;
+        }
 
+        .accordionHeaderSelected {
+            border: 1px solid #2F4F4F;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.89);
+            font-family: Arial, Sans-Serif;
+            font-size: 12px;
+            font-weight: bold;
+            padding: 5px;
+            margin-top: 5px;
+            cursor: pointer;
+        }
+
+        .accordionContent {
+            background-color: rgba(128, 128, 128, 0.40);
+            border: 1px dashed #2F4F4F;
+            border-top: none;
+            padding: 5px;
+            padding-top: 10px;
+        }
 .dvmain {
 
 }
