--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="../../Themes/js/ddsmoothmenu.js"></script>
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Images/main-bg.jpg)">
+    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Images/main-bg.jpg)" >
         <tr style="vertical-align: top">
             <td>
                 <div style="border-bottom-style: double; border-bottom-width: medium; border-bottom-color: #0099FF; background: rgba(0, 0, 0, 0.70)">
@@ -65,8 +65,10 @@
                                         <asp:TreeNode Text="Stations Detail" Value="~/Forms/Web Forms/frmStations.aspx" />
                                     </asp:TreeNode>
                                     <asp:TreeNode Text="Admin" SelectAction="SelectExpand">
-                                        <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx"></asp:TreeNode>
-                                        <asp:TreeNode Text="Role" Value="~/Forms/Web Forms/frmUserDetails.aspx"></asp:TreeNode>
+                                        <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx">
+                                             <asp:TreeNode Text="User Detail" Value="~/Forms/Web Forms/frmUserDetails.aspx"></asp:TreeNode>
+                                        </asp:TreeNode>
+                                        <asp:TreeNode Text="Role" Value="#"></asp:TreeNode>
                                         <asp:TreeNode Text="Log" Value="~/Forms/Web Forms/frmErrorLog.aspx"></asp:TreeNode>
                                     </asp:TreeNode>
                                     <asp:TreeNode Text="Reports" ToolTip="Charts" Value="../Web Forms/frmChart.aspx"></asp:TreeNode>
