--- a/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
@@ -313,4 +313,5 @@ ul.style3 .first .date
             border-color:#179090;
             border-style:groove;
             border-width:thin;
+            background-color:rgba(129, 129, 129, 0.77)
         }
