--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -14,14 +14,14 @@
 
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Images/main-bg.jpg)" >
+    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Themes/Images/main-bg.jpg)" >
         <tr style="vertical-align: top">
             <td>
                 <div style="border-bottom-style: double; border-bottom-width: medium; border-bottom-color: #0099FF; background: rgba(0, 0, 0, 0.70)">
                     <table id="tblMainHome" runat="server" style="width: 99%">
                         <tr>
                             <td style="width: 10%">
-                                <img src="../../Images/logoKraus.png" /></td>
+                                <img src="../../Themes/Images/logoKraus.png" /></td>
                             <td style="vertical-align: bottom;">
                                 <h1 style="color: #0099FF; font-weight: 100; font-family: Arial; text-align: left;"><span>Shipment Controller</span></h1>
                             </td>
@@ -29,7 +29,7 @@
                                 <table style="width: 40%; float: right;">
                                     <tr>
                                         <td class="tdRight">
-                                            <img src="../../Images/UserIcon.png" />
+                                            <img src="../../Themes/Images/UserIcon.png" />
                                         </td>
                                         <td style="text-align: left; font-weight: 700; border-right-width: thick; border-right-color: #0099FF; border-right-style: groove">
                                             <asp:Label ID="lblUserNameTop" runat="server" Text="UserName"></asp:Label>
