--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -10,7 +10,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Images/main-bg.jpg)">
+    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Themes/Images/main-bg.jpg)">
         <tr>
             <td style="vertical-align: top">
                 <div>
@@ -23,7 +23,7 @@
                                             <td>
                                                 <table style="width: 100%; margin: 0px auto;">
                                                     <tr>
-                                                        <td style="width: 10%">&nbsp;<img src="../../Images/logoKraus.png" /></td>
+                                                        <td style="width: 10%">&nbsp;<img src="../../Themes/Images/logoKraus.png" /></td>
                                                         <td style="vertical-align: bottom;">
                                                             <h1 style="color: #0099FF; font-weight: 100; font-family: Arial; text-align: left;"><span>Shipment Controller</span></h1>
                                                         </td>
