--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -69,7 +69,7 @@
                                         <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx">
                                              <asp:TreeNode Text="User Detail" Value="~/Forms/Web Forms/frmUserDetails.aspx"></asp:TreeNode>
                                         </asp:TreeNode>
-                                        <asp:TreeNode Text="Role" Value="#"></asp:TreeNode>
+                                        <asp:TreeNode Text="Role" Value="~/Forms/Web Forms/frmRoles.aspx"></asp:TreeNode>
                                         <asp:TreeNode Text="Log" Value="~/Forms/Web Forms/frmErrorLog.aspx"></asp:TreeNode>
                                     </asp:TreeNode>
                                     <asp:TreeNode Text="Reports" ToolTip="Charts" Value="../Web Forms/frmChart.aspx"></asp:TreeNode>
