--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -11,7 +11,7 @@
     </asp:ContentPlaceHolder>
     <script src="../../Themes/js/jquery.min.js"></script>
     <script type="text/javascript" src="../../Themes/js/ddsmoothmenu.js"></script>
-
+    <link rel="icon"  href="../../PackingIcon.ico" />
 </head>
 <body>
     <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Themes/Images/main-bg.jpg)" >
