--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -4,6 +4,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
+     <link rel="icon"  href="../../PackingIcon.ico" />
     <link href="../../Themes/CSS/BlackCoffeeCSS.css" rel="stylesheet" type="text/css" media="all" />
     <title>Shipment Controller</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
