--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -23,7 +23,7 @@
                             <td style="width: 10%">
                                 <img src="../../Themes/Images/logoKraus.png" /></td>
                             <td style="vertical-align: bottom;">
-                                <h1 style="color: #0099FF; font-weight: 100; font-family: Arial; text-align: left;"><span>Shipment Controller</span></h1>
+                                <h1 style="color: #0099FF; font-weight: 100; font-family: Arial; text-align: left;"><span>Warehouse Command Center</span></h1>
                             </td>
                             <td>
                                 <table style="width: 40%; float: right;">
