--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -6,7 +6,7 @@
 <head runat="server">
      <link rel="icon"  href="../../PackingIcon.ico" />
     <link href="../../Themes/CSS/BlackCoffeeCSS.css" rel="stylesheet" type="text/css" media="all" />
-    <title>Shipment Controller</title>
+    <title>Warehouse Command Center</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
