--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -65,6 +65,9 @@
                                         <asp:TreeNode Text="Station Activation" Value="~/Forms/Web Forms/frmDisableStation.aspx" />
                                         <asp:TreeNode Text="Stations Detail" Value="~/Forms/Web Forms/frmStations.aspx" />
                                     </asp:TreeNode>
+                                    <asp:TreeNode Text="Return (RMA)" SelectAction="SelectExpand">
+                                        <asp:TreeNode Text="Return Details" Value="~/Forms/Web Forms/frmRetunDetail.aspx" />
+                                    </asp:TreeNode>
                                     <asp:TreeNode Text="Admin" SelectAction="SelectExpand">
                                         <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx">
                                              <asp:TreeNode Text="User Detail" Value="~/Forms/Web Forms/frmUserDetails.aspx"></asp:TreeNode>
